Fix to avoid horizontal scrolling

--- a/packages/pxweb2/src/app/components/TableInformation/Notes/NotesTab.module.scss
+++ b/packages/pxweb2/src/app/components/TableInformation/Notes/NotesTab.module.scss
@@ -4,4 +4,5 @@
   align-items: flex-start;
   gap: 44px;
   align-self: stretch;
+  overflow-wrap:anywhere;
 }
